# FaceRecognitionServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.ini  face_capture_noSave.py  face_config.py  face_database.py  face_recognition.py  live_recognize.cpp  migrate_to_db.py  recognize.cpp  register.cpp  requirements.txt  requirements_onnx.txt  setup_database.py  websocket_server.cpp  websocket_server.py  websocket_server.py.bak
data/: .keepfolder  usernames.txt
models/: cuda_onet.onnx  cuda_pnet.onnx  cuda_rnet.onnx
src/dnn/: CMakeLists.txt  README.md  draw.hpp  embed_face.cpp  infer_cam.cpp  infer_photo.cpp
src/dnn/mtcnn/: detector.cpp  detector.h  onnx_module.cpp  onnx_module.h
src/dnn/mtcnn-jni/: build_all.sh  run.sh  run_test.sh
src/dnn/mtcnn-jni/cpp/: CMakeLists.txt  build.sh  com_mtcnn_MTCNNDetector.h  mtcnn_jni.cpp  mtcnn_jni.h
src/dnn/mtcnn-jni/java/: CMakeLists.txt  compile.sh
src/dnn/mtcnn-jni/java/com/mtcnn/: Face.java  MTCNNDetector.java  TestMTCNN.java
src/onnx/: mtcnn.cpp  mtcnn.h  mtcnn_utils.cpp  mtcnn_utils.h
src/postgres/: CMakeLists.txt  export_data.py  migrate_data.cpp  postgres.cpp  postgres.hpp  test_connection.cpp  test_connection.h  utils.hpp
src/python/: client.html  face_capture_1image.py  face_config.py  face_recognition.py  live_recognize.py  python_client.py  test_inference.py  test_opencv_headless.py  websocket_server.py
src/recognizer/: face_recognizer.cpp  face_recognizer.hpp
src/test/: CMakeLists.txt  test_cam.py  test_mtcnn.cpp  test_onnx.cpp
src/utils/: config.cpp  config.hpp  face_quality.cpp
src/websocket/: README.md  base64.hpp  config.cpp  config.hpp  face_quality.hpp
tests/: demo_anhTai.py  face_capture_noSave.py  model_export.ipynb  test_config.py  test_onnx_export.py  test_opencv.py  websocket_server.py
